fixing IOSbug with cropped text

--- a/src/widgets/about/about.module.scss
+++ b/src/widgets/about/about.module.scss
@@ -41,5 +41,11 @@
   .about {
     width: 100%;
     aspect-ratio: 1/0.6;
+
+    & div {
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+    }
   }
 }
